// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UserMessage > renders user message with basic text 1`] = `
<div
  className="comment "
>
  <div
    className="circle user"
  >
    <svg
      className="icon"
      dangerouslySetInnerHTML={
        {
          "__html": "<path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/>",
        }
      }
      fill="none"
      height={20}
      stroke="white"
      strokeLinecap="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
  <div>
    <div>
      Hello, this is my question
    </div>
  </div>
</div>
`;

exports[`UserMessage > renders user message with custom className 1`] = `
<div
  className="comment most-recent"
>
  <div
    className="circle user"
  >
    <svg
      className="icon"
      dangerouslySetInnerHTML={
        {
          "__html": "<path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/>",
        }
      }
      fill="none"
      height={20}
      stroke="white"
      strokeLinecap="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
  <div>
    <div>
      Another question
    </div>
  </div>
</div>
`;

exports[`UserMessage > renders user message without className 1`] = `
<div
  className="comment "
>
  <div
    className="circle user"
  >
    <svg
      className="icon"
      dangerouslySetInnerHTML={
        {
          "__html": "<path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/>",
        }
      }
      fill="none"
      height={20}
      stroke="white"
      strokeLinecap="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
  <div>
    <div>
      Test message
    </div>
  </div>
</div>
`;
